# substr

./: README.md  pyproject.toml
docker/: docker-compose.yml  dockerfile  nginx.conf
substr/: app.py  data.py  depends.py  router.py  schemas.py  services.py  settings.py
tests/: test.py  test_data.txt
